--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,7 +1,11 @@
 :root {
+    --primary-color: #fb5632;
     --white-color: #fff;
     --black-color: #000;
     --text-color: #333;
+    --header-height: 120px;
+    --navbar-height: 34px;
+    --subnav-height: calc(var(--header-height) - var(--navbar-height));
 }
 
 * {
@@ -19,7 +23,7 @@ html {
 
 .grid {
     width: 1200px;
-    min-width: 100%;
+    max-width: 100%;
     margin: 0 auto;
 }
 
