--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,12 @@
 .header {
-    height: 120px;
+    height: var(--header-height);
     background-image: linear-gradient(0, #fe6433, #f53e2d);
 }
 
 .nav {
     display: flex;
     justify-content: space-between;
+    height: var(--navbar-height);
 }
 
 .nav__list {
@@ -67,4 +68,68 @@
     font-size: 1.6rem;
     margin: 0 4px;
     padding: 0px;
+}
+
+.subnav {
+    height: var(--subnav-height);
+    display: flex;
+    align-items: center;
+}
+
+.subnav__logo {
+    width: 200px;
+}
+
+.subnav__logo-img {
+    width: 150px;
+    margin: 0 8px;
+}
+
+.subnav__search {
+    background-color: var(--white-color);
+    height: 40px;
+    flex: 1;
+    border-radius: 2px;
+}
+
+.subnav__cart {
+    width: 150px;
+    text-align: center;
+}
+
+.subnav__cart-icon {
+    font-size: 2.4rem;
+    color: var(--white-color);
+    margin-top: 6px;
+}
+
+.subnav__search-input {
+    width: 90%;
+    height: 100%;
+    border: none;
+    outline: none;
+    font-size: 1.4rem;
+    color: var(--text-color);
+    padding: 0 16px;
+    border-radius: 3px;
+}
+
+.subnav__search-btn {
+    background-color: var(--primary-color);
+    border: none;
+    outline: none;
+    height: 32px;
+    width: 8%;
+    border-radius: 3px;
+    text-align: center;
+}
+
+.subnav__search-btn:hover {
+    opacity: 0.9;
+    cursor: pointer;
+}
+
+.subnav__search-icon {
+    font-size: 1.6rem;
+    color: var(--white-color);
 }
